Added coverage verification and tests